--- a/assets/style.css
+++ b/assets/style.css
@@ -1,23 +1,13 @@
-header {
-    background-color: darkmagenta;
-    width: 100vw;
-    height: 75px;
-
-}
-
-#headerName {
-    color: lightgray;
-    font-size: 24px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding-left: 10px;
-    line-height: 66px;
-
-}
-
 .container {
 
 }
 
 .footer {
 
+}
+
+.bg-navbar {
+    min-height: 66px;
+    background-color: #48038C;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .05), inset 0 -1px 0 rgba(0, 0, 0, .1);
 }
