Cards added for each service to be offered. Next steps include editing description, images, and button colors

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,10 +12,20 @@ a:hover {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .05), inset 0 -1px 0 rgba(0, 0, 0, .1);
 }
 
-body {
+.tagline {
+    font-family: 'Play', sans-serif;
+    font-weight: bold;
+    font-size: 48px;
+    color: #48038C;
+    text-align: center;
+    margin-top: 10px;
+    background-color: whitesmoke;
+    height: auto;
+    width: 100vw;
     
 }
-.container {
+
+.intro {
     margin-top: 50px;
     padding: 20px;
     background-color: whitesmoke;
