--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,11 @@ a:hover {
     color: #48038C;
 }
 
+.button {
+    background-color: #48038C;
+    color: white;
+}
+
 .intro {
     margin-top: 50px;
     padding: 20px;
@@ -80,6 +85,7 @@ footer {
 .portfolio {
     background-color: whitesmoke;
     height: auto;
+    width: 100vw;
     padding: 20px;
     margin-top: 50px;
 
