--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,15 @@ a:hover {
     
 }
 
+.hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url(./images/light-bulb.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
 .btn-headline {
     text-align: center;
     padding-bottom: 20px;
