--- a/assets/style.css
+++ b/assets/style.css
@@ -15,10 +15,10 @@ a:hover {
 .tagline {
     font-family: 'Play', sans-serif;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 50px;
     color: #26014A;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 15px;
     background-color: whitesmoke;
     height: auto;
     width: 100vw;
@@ -32,6 +32,13 @@ a:hover {
     background-image: url(./images/light-bulb.jpg);
     background-size: cover;
     background-position: center;
+}
+
+.headline-div {
+    height: 500px;
+    width: 100vw;
+    margin-left: 100px;
+    margin-top: 200px;
 }
 
 .btn-headline {
@@ -68,8 +75,7 @@ a:hover {
 #headline {
     font-family: 'Play', sans-serif;
     font-weight: bold;
-    font-size: 28px;
-    
+    font-size: 50px;
 }
 
 .table {
