--- a/style.css
+++ b/style.css
@@ -15,13 +15,12 @@ a:hover {
 .tagline {
     font-family: 'Play', sans-serif;
     font-weight: bold;
-    font-size: xxx-large;
+    font-size: xx-large;
     color: #26014A;
     text-align: center;
     margin-top: 15px;
     background-color: whitesmoke;
     height: auto;
-    width: 100vw;
     
 }
 
@@ -136,17 +135,26 @@ footer {
     width: 100vw;
     text-align: center;
     padding-top: 20px;
+    height: 75px;
+    opacity: 0.9;
 }
 
-/*Portfolio page begins
-*/
+/*Portfolio page begins*/
+
+.bg-color {
+    background-color: whitesmoke;
+}
 .portfolio {
     background-color: whitesmoke;
     height: auto;
     width: 100vw;
     padding: 20px;
     margin-top: 50px;
+    margin-bottom: 200px;
+}
 
+.portf-ctr {
+    align-content: center;
 }
 
 .proj-descr-hl {
@@ -161,8 +169,11 @@ footer {
    
 }
 
-/*Portfolio page begins
-*/
+.portf-spc {
+    margin-bottom: 150px;
+}
+
+/*Portfolio page ends*/
 
 .form {
     margin-top: 50px;
